--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 <li><a href="https://ahmadhirthani.github.io/happylife">Sports Advice</a></li>
                 <li><a href="https://ahmadhirthani.github.io/happylife">Contact us</a></li>
                 <li><a href="https://ahmadhirthani.github.io/happylife">About us</a></li>
+                <li id="loginName"><a href="https://ahmadhirthani.github.io/happylife"></a></li>
+
             </ul>
         </nav>
     </header>
@@ -86,6 +88,7 @@
     <footer>
         <p>&copy;Ahmad Alhirthani 2020</p>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
