--- a/index.html
+++ b/index.html
@@ -2,27 +2,24 @@
 <html lang="en">
 
 <head>
-   
-    <link href="css/styles.css" rel="stylesheet">
+
+    <link href="css/maleStyle.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Life</title>
+
 </head>
 
 <body>
     <header>
-
         <nav>
-
-            
-
             <ul>
                 <li><h1>Happy life</h1></li>
+                <li><h2 id='warning'></h2></li>
                 <li><a href="https://ahmadhirthani.github.io/happylife">HOME</a></li>
-                <li><a href="https://ahmadhirthani.github.io/happylife">Sports Advice</a></li>
                 <li><a href="https://ahmadhirthani.github.io/happylife">Contact us</a></li>
                 <li><a href="https://ahmadhirthani.github.io/happylife">About us</a></li>
-                <li id="loginName"><a href="https://ahmadhirthani.github.io/happylife"></a></li>
+                <li><a id="loginName" href="https://ahmadhirthani.github.io/happylife">Login</a></li>
 
             </ul>
         </nav>
