add flowers pictires with for loop

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     <header>
         <nav>
             <ul>
-                <li><h1>Happy life</h1></li>
-                <li><h2 id='warning'></h2></li>
+                <li>
+                    <h1>Happy life</h1>
+                </li>
+                <li>
+                    <h2 id='warning'></h2>
+                </li>
                 <li><a href="https://ahmadhirthani.github.io/happylife">HOME</a></li>
                 <li><a href="https://ahmadhirthani.github.io/happylife">Contact us</a></li>
                 <li><a href="https://ahmadhirthani.github.io/happylife">About us</a></li>
@@ -23,12 +27,16 @@
 
             </ul>
         </nav>
-    </header>
-    <main>
 
-        <article>
-            <section id="imgsection">
-                <img src="https://cdn.pixabay.com/photo/2015/07/16/17/17/run-847957_960_720.jpg" alt="" srcset="">
+    </header>
+    <script src="js/script.js"></script>
+
+    <main>
+        <article aria-setsize="200px">
+            
+            <section id="imgsection" >
+                <img class="articleImage" src="https://cdn.pixabay.com/photo/2015/07/16/17/17/run-847957_960_720.jpg"
+                    alt="" srcset="">
 
             </section>
             <section id="psection">
@@ -47,7 +55,7 @@
 
         </article>
         <article>
-            <section id="imgsection"><img
+            <section id="imgsection"><img class="articleImage"
                     src="https://c0.wallpaperflare.com/preview/886/624/952/food-healthy-lifestyle-eating-healthy-healthy.jpg"
                     alt="" srcset=""></section>
             <section id="psection">
@@ -72,7 +80,7 @@
 
         </article>
         <article>
-            <section id="imgsection"><img
+            <section id="imgsection"><img class="articleImage"
                     src="https://c1.wallpaperflare.com/preview/618/815/724/solitude-alone-dock-female.jpg" alt=""
                     srcset=""></section>
             <section id="psection">
@@ -85,7 +93,6 @@
     <footer>
         <p>&copy;Ahmad Alhirthani 2020</p>
     </footer>
-    <script src="js/script.js"></script>
 </body>
 
 </html>
