--- a/index.html
+++ b/index.html
@@ -7,37 +7,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Life</title>
-
 </head>
 
 <body>
     <header>
         <nav>
             <ul>
-                <li>
-                    <h1>Happy life</h1>
-                </li>
-                <li>
-                    <h2 id='warning'></h2>
-                </li>
+                <li><h1>Happy life</h1></li>
+                <li><h2 id='warning'></h2></li>
                 <li><a href="https://ahmadhirthani.github.io/happylife">HOME</a></li>
                 <li><a href="https://ahmadhirthani.github.io/happylife">Contact us</a></li>
                 <li><a href="https://ahmadhirthani.github.io/happylife">About us</a></li>
                 <li><a id="loginName" href="https://ahmadhirthani.github.io/happylife">Login</a></li>
-
             </ul>
         </nav>
-
     </header>
     <script src="js/script.js"></script>
-
     <main>
         <article aria-setsize="200px">
-            
-            <section id="imgsection" >
+            <section id="imgsection">
                 <img class="articleImage" src="https://cdn.pixabay.com/photo/2015/07/16/17/17/run-847957_960_720.jpg"
                     alt="" srcset="">
-
             </section>
             <section id="psection">
                 <h2>Playing Sports</h2>
@@ -51,8 +41,6 @@
                     local
                     running club.</p>
             </section>
-
-
         </article>
         <article>
             <section id="imgsection"><img class="articleImage"
@@ -60,7 +48,6 @@
                     alt="" srcset=""></section>
             <section id="psection">
                 <h2>Eating healthy food</h2>
-
                 <p>The food we eat gives our bodies the "information" and materials they need to function properly. If
                     we
                     don't get the right information, our metabolic processes suffer and our health declines.
@@ -76,8 +63,6 @@
                     alleviation,
                     or cure of disease."</p>
             </section>
-
-
         </article>
         <article>
             <section id="imgsection"><img class="articleImage"
@@ -85,7 +70,6 @@
                     srcset=""></section>
             <section id="psection">
                 <h2>Staying alone</h2>
-
                 <p> staying alone for a part of your day will makes you feel better and imporoves your life</p>
             </section>
         </article>
@@ -94,5 +78,4 @@
         <p>&copy;Ahmad Alhirthani 2020</p>
     </footer>
 </body>
-
 </html>
