--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     alt="" srcset="">
             </section>
             <section id="psection">
-                <h2>Playing Sports</h2>
+                <h2>Playing Sport</h2>
                 <p>Jogging or running is a popular form of physical activity. About one in five Australians try running
                     (or
                     jogging) at some stage in their life. Running is an appealing exercise because it doesn't cost a lot
